// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<MousePosition
  className="Diagram"
  isActive={false}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
>
  <div
    className="Diagram-content"
    style={
      Object {
        "height": 0,
        "width": 0,
      }
    }
  />
  <FloatingActionButton
    className="Diagram-add"
    disabled={false}
    mini={false}
    onClick={[Function]}
    secondary={true}
    zDepth={4}
  >
    <ContentAdd />
  </FloatingActionButton>
</MousePosition>
`;

exports[`with blocks renders a link if linking 1`] = `
<MousePosition
  className="Diagram Diagram-linking"
  isActive={true}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
>
  <div
    className="Diagram-content"
    style={
      Object {
        "height": 10,
        "width": 5,
      }
    }
  >
    <BlockDetail
      height={20}
      id="0"
      isLinking={true}
      key="0"
      name="Block"
      onDelete={[Function]}
      onLinkEnd={[Function]}
      onLinkStart={[Function]}
      onNameChange={[Function]}
      onSizeChange={[Function]}
      width={10}
      x={0}
      y={0}
    />
    <Linking
      fromBlock={
        Object {
          "height": 0,
          "id": "0",
          "name": "Block",
          "width": 0,
          "x": 1,
          "y": 2,
        }
      }
      toMouse={
        Object {
          "x": 10,
          "y": 20,
        }
      }
    />
  </div>
  <FloatingActionButton
    className="Diagram-add"
    disabled={false}
    mini={false}
    onClick={[Function]}
    secondary={true}
    zDepth={4}
  >
    <ContentAdd />
  </FloatingActionButton>
</MousePosition>
`;

exports[`with blocks renders the blocks 1`] = `
<MousePosition
  className="Diagram"
  isActive={false}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
>
  <div
    className="Diagram-content"
    style={
      Object {
        "height": 20,
        "width": 15,
      }
    }
  >
    <BlockDetail
      height={20}
      id="0"
      isLinking={false}
      key="0"
      name="Block 1"
      onDelete={[Function]}
      onLinkEnd={[Function]}
      onLinkStart={[Function]}
      onNameChange={[Function]}
      onSizeChange={[Function]}
      width={10}
      x={0}
      y={0}
    />
    <BlockDetail
      height={40}
      id="1"
      isLinking={false}
      key="1"
      name="Block 2"
      onDelete={[Function]}
      onLinkEnd={[Function]}
      onLinkStart={[Function]}
      onNameChange={[Function]}
      onSizeChange={[Function]}
      width={30}
      x={0}
      y={0}
    />
  </div>
  <FloatingActionButton
    className="Diagram-add"
    disabled={false}
    mini={false}
    onClick={[Function]}
    secondary={true}
    zDepth={4}
  >
    <ContentAdd />
  </FloatingActionButton>
</MousePosition>
`;

exports[`with links renders the links 1`] = `
<MousePosition
  className="Diagram"
  isActive={false}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
>
  <div
    className="Diagram-content"
    style={
      Object {
        "height": 30,
        "width": 25,
      }
    }
  >
    <BlockDetail
      height={20}
      id="0"
      isLinking={false}
      key="0"
      name="Block 1"
      onDelete={[Function]}
      onLinkEnd={[Function]}
      onLinkStart={[Function]}
      onNameChange={[Function]}
      onSizeChange={[Function]}
      width={10}
      x={0}
      y={0}
    />
    <BlockDetail
      height={40}
      id="1"
      isLinking={false}
      key="1"
      name="Block 2"
      onDelete={[Function]}
      onLinkEnd={[Function]}
      onLinkStart={[Function]}
      onNameChange={[Function]}
      onSizeChange={[Function]}
      width={30}
      x={0}
      y={0}
    />
    <BlockDetail
      height={60}
      id="2"
      isLinking={false}
      key="2"
      name="Block 3"
      onDelete={[Function]}
      onLinkEnd={[Function]}
      onLinkStart={[Function]}
      onNameChange={[Function]}
      onSizeChange={[Function]}
      width={50}
      x={0}
      y={0}
    />
    <LinkDetail
      fromBlock={
        Object {
          "height": 20,
          "id": "0",
          "name": "Block 1",
          "width": 10,
          "x": 0,
          "y": 0,
        }
      }
      id="0"
      isLinking={false}
      key="0"
      onDelete={[Function]}
      toBlock={
        Object {
          "height": 40,
          "id": "1",
          "name": "Block 2",
          "width": 30,
          "x": 0,
          "y": 0,
        }
      }
    />
    <LinkDetail
      fromBlock={
        Object {
          "height": 40,
          "id": "1",
          "name": "Block 2",
          "width": 30,
          "x": 0,
          "y": 0,
        }
      }
      id="1"
      isLinking={false}
      key="1"
      onDelete={[Function]}
      toBlock={
        Object {
          "height": 60,
          "id": "2",
          "name": "Block 3",
          "width": 50,
          "x": 0,
          "y": 0,
        }
      }
    />
  </div>
  <FloatingActionButton
    className="Diagram-add"
    disabled={false}
    mini={false}
    onClick={[Function]}
    secondary={true}
    zDepth={4}
  >
    <ContentAdd />
  </FloatingActionButton>
</MousePosition>
`;
